[build-system]
requires = [
    "setuptools",
    "packaging",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "qutip-cuquantum"
dynamic = ["version"]
description = "cuQuantum backend for QuTiP"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["quantum", "physics", "dynamics", "gpu", "linear-algebra"]
authors = [
  {name = "Eric Giguère", email = "qutip-admin@googlegroups.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "qutip>=5.3.0",
]

# URLs for your project
[project.urls]
Homepage = "https://qutip.org"
"Bug Tracker" = "https://github.com/qutip/qutip-cuquantum/issues"
Documentation = "https://qutip-cuquantum.readthedocs.io/en/latest/"

[project.optional-dependencies]
# Bindings only. These assume the matching CUDA runtime libraries (cuBLAS, cuSOLVER,
# cuSPARSE, cuFFT) are already available via a system CUDA Toolkit on the loader path
cuda11 = ["cupy-cuda11x", "cuquantum-python-cu11"]
cuda12 = ["cupy-cuda12x", "cuquantum-python-cu12"]
cuda13 = ["cupy-cuda13x", "cuquantum-python-cu13"]
# Self-contained. These also pull CUDA runtime libraries as wheels (via CuPy's [ctk] extra),
# so only the NVIDIA driver needs to be present. Recommended for fresh environments,
# containers, or CI without a system CUDA Toolkit.
cuda12-full = ["cupy-cuda12x[ctk]", "cuquantum-python-cu12"]
cuda13-full = ["cupy-cuda13x[ctk]", "cuquantum-python-cu13"]

tests = ["pytest>=6.0"]

[project.entry-points."qutip.family"]
qutip_cuquantum = "qutip_cuquantum.family"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-Werror --strict-config --strict-markers -W ignore::DeprecationWarning"
testpaths = [
    "tests",
]
